update pom file

--- a/pom.xml
+++ b/pom.xml
@@ -1,56 +1,70 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.agmip.parent</groupId>
-    <artifactId>agmip-translator-parent</artifactId>
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.agmip.parent</groupId>
+        <artifactId>agmip-translator-parent</artifactId>
+        <version>2.0.0-SNAPSHOT</version>
+    </parent>
+    <groupId>org.agmip.translators</groupId>
+    <artifactId>translator-sarrah</artifactId>
     <version>2.0.0-SNAPSHOT</version>
-  </parent>
-  <groupId>org.agmip.translator</groupId>
-  <artifactId>translator-sarrah</artifactId>
-  <version>2.0.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
-  <name>AgMIP SarraH Translator</name>
-  <description>
-    AgMIP Sarrah Translator
-  </description>
-  <url>http://www.agmip.org/</url>
+    <packaging>jar</packaging>
+    <name>AgMIP SarraH Translator</name>
+    <description>
+        AgMIP Sarrah Translator
+    </description>
+    <url>http://www.agmip.org/</url>
 
-  <issueManagement>
-    <url>https://github.com/agmip/translator-sarrah/issues</url>
-    <system>GitHub Issues</system>
-  </issueManagement>
+    <issueManagement>
+        <url>https://github.com/agmip/translator-sarrah/issues</url>
+        <system>GitHub Issues</system>
+    </issueManagement>
 
-  <licenses>
-    <license>
-      <name>BSD License</name>
-      <url>https://raw.github.com/agmip/translator-sarrah/master/LICENSE</url>
-      <distribution>repo</distribution>
-    </license>
-  </licenses>
+    <licenses>
+        <license>
+            <name>BSD License</name>
+            <url>https://raw.github.com/agmip/translator-sarrah/master/LICENSE</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
 
-  <scm>
-    <url>https://github.com/agmip/translator-sarrah</url>
-    <connection>scm:git:git://github.com/agmip/translator-sarrah.git</connection>
-    <developerConnection>scm:git:git@github.com:agmip/translator-sarrah.git</developerConnection>
-    <tag>HEAD</tag>
-  </scm>
+    <scm>
+        <url>https://github.com/agmip/translator-sarrah</url>
+        <connection>scm:git:git://github.com/agmip/translator-sarrah.git</connection>
+        <developerConnection>scm:git:git@github.com:agmip/translator-sarrah.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
 
-  <dependencies>
-    <dependency>
-      <groupId>org.agmip.ace</groupId>
-      <artifactId>ace-core</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-classic</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.opencsv</groupId>
-      <artifactId>opencsv</artifactId>
-    </dependency>
-  </dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>org.agmip.ace</groupId>
+            <artifactId>ace-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.agmip</groupId>
+            <artifactId>agmip-common-functions</artifactId>
+            <version>1.3.13-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.agmip</groupId>
+            <artifactId>dome</artifactId>
+            <version>1.4.12-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity</artifactId>
+        </dependency>
+    </dependencies>
 </project>
