--- a/src/main/resources/Sim_ListeSimule.template
+++ b/src/main/resources/Sim_ListeSimule.template
@@ -1,5 +1,5 @@
-#separateur|	";date_format|dd/MM/yyyy;heure_format|hh:mm:ss;float_separateur|,;"		
-Dossier	IdRequete	Table	Texte
+#separateur|	";date_format|dd/MM/yyyy;heure_format|hh:mm:ss;float_separateur|.;"
+IdSimule	IdModele
 #foreach ( $exp in $exps )
-$!exp.id	SarrahV33
+$!exp.exname	SarrahV33
 #end
