--- a/src/main/resources/Sim_ListeRequete.template
+++ b/src/main/resources/Sim_ListeRequete.template
@@ -1,5 +1,3 @@
 #separateur|	";date_format|dd/MM/yyyy;heure_format|hh:mm:ss;float_separateur|,;"		
 Dossier	IdRequete	Table	Texte
-#foreach ( $exp in $exps )
-$!exp.id	$!exp.sarrah_idRequete	Faux	Vrai
-#end
+$!exp.idDossier	$!exp.sarrah_idRequete	Faux	Vrai
