--- a/src/main/resources/Sim_ListeRequete.template
+++ b/src/main/resources/Sim_ListeRequete.template
@@ -1,3 +1,3 @@
 #separateur|	";date_format|dd/MM/yyyy;heure_format|hh:mm:ss;float_separateur|,;"		
 Dossier	IdRequete	Table	Texte
-$!exp.idDossier	$!exp.sarrah_idRequete	Faux	Vrai
+$!exp.idDossier	$!exp.sarrah_idrequete	Faux	Vrai
